test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/abi_name_attr.sw
library;

#[abi_name(name)]
pub struct NotOk { }